manifests/gpu/clusterpolicy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  operator:
    runtimeClass: nvidia
    use_ocp_driver_toolkit: true
  driver:
    enabled: true
    useNvidiaDriverCRD: false
    kernelModuleType: auto
    licensingConfig:
      nlsEnabled: true
    upgradePolicy:
      autoUpgrade: true
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      drain:
        enable: false
        force: false
        deleteEmptyDir: false
        timeoutSeconds: 300
      podDeletion:
        force: false
        deleteEmptyDir: false
        timeoutSeconds: 300
  daemonsets:
    updateStrategy: RollingUpdate
    rollingUpdate:
      maxUnavailable: "1"
  devicePlugin:
    enabled: true
    config:
      name: time-slicing-config
      default: any
    mps:
      root: /run/nvidia/mps
  dcgm:
    enabled: true
  dcgmExporter:
    enabled: true
    serviceMonitor:
      enabled: true
  gfd:
    enabled: true
  toolkit:
    enabled: true
    installDir: /usr/local/nvidia
  validator:
    plugin:
      env: []
  mig:
    strategy: single
  migManager:
    enabled: true
    config:
      default: all-disabled
  nodeStatusExporter:
    enabled: true
  cdi:
    enabled: true
    default: false
    nriPluginEnabled: false
  ccManager:
    enabled: true
  gdrcopy:
    enabled: false
  gds:
    enabled: false
  sandboxDevicePlugin:
    enabled: true
  kataSandboxDevicePlugin:
    enabled: true
  sandboxWorkloads:
    enabled: false
    defaultWorkload: container
    mode: kubevirt
  vfioManager:
    enabled: true
  vgpuManager:
    enabled: false
  vgpuDeviceManager:
    enabled: true
    config:
      default: default
